# PIRANA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
script/: test_batch_query.sh  test_single_query.sh
script/batch_query_test_log/: batch_query.txt
script/single_query_test_log/: single_query.txt
src/: client.cc  client.h  main.cc  pir_parms.cc  pir_parms.h  server.cc  server.h  test.cc  test.h  utils.cc  utils.h
